Add: Create UserProfile Features, Fix Endpoint call

--- a/Sivv.Application/Sivv.Application.csproj
+++ b/Sivv.Application/Sivv.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <Folder Include="Features\UserAccounts\Queries\" />
+    <Folder Include="Features\UserProfiles\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
